--- a/.github/workflows/cpu_local_marqo.yml
+++ b/.github/workflows/cpu_local_marqo.yml
@@ -1,15 +1,43 @@
-name: Build and push marqo docker image to ECR
+name: cpu_local_marqo_API_tests
+# runs API Tests on CPU-only instance with Vespa and Marqo running in two separate docker containers
 
 on:
+  workflow_call:
   workflow_dispatch:
     inputs:
-      marqo_ref:
-        description: 'marqo branch-name, commit SHA or tag'
-        required: true
-        default: 'mainline'
-      image_tag:
-        description: 'Image tag, will use git commit SHA if not provided'
+      py_marqo_branch:
         required: false
+        default: mainline
+        description: >
+          The "py-marqo" branch this test is running against.
+          This is optional. If left as the default value "mainline", we run the test based on the "mainline" branch of
+          py-marqo. Otherwise, the specified branch is tested. For example "li/test-xx". You can also use "marqo" and 
+          it will use the latest pypi release.
+      api_tests_branch:
+        required: false
+        default: mainline
+        description: >
+          The "api-tests" branch this test is running against.
+          This is optional. If left as the default value "mainline", we run the api tests based at branch
+          "mainline". Otherwise, the specified branch is tested. For example "li/test-xx"
+      image_to_test:
+        required: false
+        # This is the name of the docker image that is built by the build script:
+        default: marqo_docker_0
+        description: >
+          This is optional. If left as the default value "marqo_docker_0", the docker image built from this branch is tested.
+          Otherwise, the specified docker image is tested. For example "marqoai/marqo:test"
+  push:
+    branches:
+      - mainline
+    paths-ignore:
+      - '**.md'
+  pull_request:
+    branches:
+      - mainline
+
+permissions:
+  contents: read
 
 jobs:
   Start-Runner:
@@ -27,61 +55,77 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
       - name: Start EC2 runner
         id: start-ec2-runner
-        uses: machulav/ec2-github-runner@fcfb31a5760dad1314a64a0e172b78ec6fc8a17e  # v2.3.6
+        uses: machulav/ec2-github-runner@v2
         with:
           mode: start
           github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
-          # 200 GB amd64 image
           ec2-image-id:  ${{ secrets.AMD_EC2_IMAGE_ID }}
           ec2-instance-type: t3.xlarge
           subnet-id: ${{ secrets.AMD_SUBNET_ID }}
           security-group-id: ${{ secrets.AMD_SECURITY_GROUP_ID }}
 
-  Docker-Build:
-    name: Build docker image
+  Test-Marqo:
+    name: Run CPU Local Marqo API Tests
     needs: Start-Runner # required to start the main job when the runner is ready
     runs-on: ${{ needs.start-runner.outputs.label }} # run the job on the newly created runner
 
-    environment: marqo-build-environment
+    environment: marqo-test-suite
 
     steps:
-      - name: Checkout marqo
+
+      - name: Checkout marqo repo
         uses: actions/checkout@v3
         with:
-          repository: marqo-ai/marqo
-          ref: ${{ github.event.inputs.marqo_ref }}
+          fetch-depth: 0
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.8"
+          cache: "pip"
+
+      - name: Install Dependencies
+        run: |
+          #pip install -r requirements.txt
+          pip install tox==3.26
+          pip install flake8
+
+      - name: Set MQ_PY_MARQO_BRANCH variable
+        run: |
+          if [[ "${{ inputs.py_marqo_branch }}" == "marqo" ]]; then
+            echo "MQ_PY_MARQO_BRANCH=marqo" >> $GITHUB_ENV
+          elif [[ "${{ inputs.py_marqo_branch }}" == "" ]]; then
+            echo "MQ_PY_MARQO_BRANCH=git+https://github.com/marqo-ai/py-marqo.git@mainline" >> $GITHUB_ENV
+          else
+            echo "MQ_PY_MARQO_BRANCH=git+https://github.com/marqo-ai/py-marqo.git@${{ inputs.py_marqo_branch }}" >> $GITHUB_ENV
+          fi
+
+      - name: Checkout marqo-api-tests repo
+        uses: actions/checkout@v3
+        with:
+          repository: marqo-ai/marqo-api-tests
+          ref: ${{ github.event.inputs.api_tests_branch }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.ECR_PUSHER_AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.ECR_PUSHER_AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
+      - name: Set up Environment
+        run: |
+          # Set up conf file
+          echo 'export MARQO_API_TESTS_ROOT="${{ github.workspace }}"' >> conf
 
-      - name: Login to ECR
-        uses: docker/login-action@v2
-        with:
-          registry: ${{ secrets.ECR_DEV_MARQO_BASE_REGISTRY }}/marqo
-
-      - name: Build and push
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          push: true
-          platforms: linux/amd64,linux/arm64
-          tags: ${{ secrets.ECR_DEV_MARQO_BASE_REGISTRY }}/marqo:${{ github.event.inputs.image_tag || github.sha }}
+      - name: Run Integration Tests - CPU Local Marqo
+        run: |
+          export MQ_API_TEST_BRANCH=$(echo "${GITHUB_REF}" | cut -d'/' -f3-)
+          CUSTOM_TEST_IMG="${{ github.event.inputs.image_to_test }}"
+          export MQ_API_TEST_IMG=${CUSTOM_TEST_IMG:-"marqo_docker_0"}
+          tox -e py3-local_marqo
 
   Stop-Runner:
     name: Stop self-hosted EC2 runner
     needs:
       - Start-Runner # required to get output from the start-runner job
-      - Docker-Build # required to wait when the main job is done
+      - Test-Marqo # required to wait when the main job is done
     runs-on: ubuntu-latest
     if: ${{ always() }} # required to stop the runner even if the error happened in the previous jobs
     steps:
@@ -92,7 +136,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
       - name: Stop EC2 runner
-        uses: machulav/ec2-github-runner@fcfb31a5760dad1314a64a0e172b78ec6fc8a17e  # v2.3.6
+        uses: machulav/ec2-github-runner@v2
         with:
           mode: stop
           github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
