remove time limit, add new scripts

--- a/perf_tests/locust.conf
+++ b/perf_tests/locust.conf
@@ -15,7 +15,7 @@ spawn-rate = 5
 
 # How long stress testing will go on
 # (Turn this on only if you're running locust in headless mode)
-run-time = 60
+# run-time = 60
 
 html = report/report.html
 
