--- a/perf_tests/requirements.txt
+++ b/perf_tests/requirements.txt
@@ -55,24 +55,35 @@ marqo==3.7.0
     # via -r requirements.in
 msgpack==1.0.8
     # via locust
+numpy==1.24.4
+    # via pandas
 packaging==24.1
     # via marqo
+pandas==2.0.3
+    # via -r requirements.in
 psutil==6.0.0
     # via locust
 pydantic==2.8.2
     # via marqo
 pydantic-core==2.20.1
     # via pydantic
+python-dateutil==2.9.0.post0
+    # via pandas
+pytz==2024.2
+    # via pandas
 pyzmq==26.2.0
     # via locust
-requests==2.32.3
+requests==2.31.0
     # via
+    #   -r requirements.in
     #   locust
     #   marqo
 roundrobin==0.0.4
     # via locust
 six==1.16.0
-    # via geventhttpclient
+    # via
+    #   geventhttpclient
+    #   python-dateutil
 tomli==2.0.1
     # via locust
 typing-extensions==4.12.2
@@ -81,6 +92,8 @@ typing-extensions==4.12.2
     #   marqo
     #   pydantic
     #   pydantic-core
+tzdata==2024.2
+    # via pandas
 urllib3==1.26.19
     # via
     #   marqo
