Also ensure largemodel tests and API tests only run once per batch

--- a/.github/workflows/largemodel_unit_test_CI.yml
+++ b/.github/workflows/largemodel_unit_test_CI.yml
@@ -13,6 +13,10 @@ on:
     branches:
       - mainline
 
+concurrency:
+  group: large-model-unit-tests-${{ github.ref }}
+  cancel-in-progress: true
+
 permissions:
   contents: read
 
