--- a/.github/workflows/cuda_docker_marqo.yml
+++ b/.github/workflows/cuda_docker_marqo.yml
@@ -33,6 +33,10 @@ on:
     paths-ignore:
       - '**.md'
 
+concurrency:
+  group: cuda-api-tests-${{ github.ref }}
+  cancel-in-progress: true
+
 permissions:
   contents: read
 
