--- a/.github/workflows/cpu_local_marqo.yml
+++ b/.github/workflows/cpu_local_marqo.yml
@@ -54,19 +54,27 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
+          aws-access-key-id: ${{ secrets.LARGEMODELTEST_ACCESSKEY }}
+          aws-secret-access-key: ${{ secrets.LARGEMODELTEST_SECRETACCESSKEY }}
+          aws-region: ${{ secrets.LARGEMODELTEST_AWS_REGION }}
       - name: Start EC2 runner
         id: start-ec2-runner
         uses: machulav/ec2-github-runner@v2
         with:
           mode: start
           github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
-          ec2-image-id:  ${{ secrets.AMD_EC2_IMAGE_ID }}
-          ec2-instance-type: t3.xlarge
-          subnet-id: ${{ secrets.AMD_SUBNET_ID }}
-          security-group-id: ${{ secrets.AMD_SECURITY_GROUP_ID }}
+          ec2-image-id: ${{ vars.MARQO_CPU_TESTS_INSTANCE_AMI }}
+          ec2-instance-type: m6i.xlarge
+          subnet-id: ${{ secrets.LARGEMODELTEST_SUBNET_ID }}
+          security-group-id: ${{ secrets.LARGEMODELTEST_SECURITY_GROUP }}
+          aws-resource-tags: > # optional, requires additional permissions
+            [
+              {"Key": "Name", "Value": "Marqo-ec2-github-runner"},
+              {"Key": "GitHubRepository", "Value": "${{ github.repository }}"},
+              {"Key": "Workflow", "Value": "${{ github.workflow }}"},
+              {"Key": "role", "Value": "testing"},
+              {"Key": "Worlflow URL", "Value": "${{ github.event.repository.html_url }}/actions/runs/${{ github.run_id }}"}
+            ]
 
   Test-Marqo:
     name: Run CPU Local Marqo API Tests
@@ -137,9 +145,9 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
+          aws-access-key-id: ${{ secrets.LARGEMODELTEST_ACCESSKEY }}
+          aws-secret-access-key: ${{ secrets.LARGEMODELTEST_SECRETACCESSKEY }}
+          aws-region: ${{ secrets.LARGEMODELTEST_AWS_REGION }}
       - name: Stop EC2 runner
         uses: machulav/ec2-github-runner@v2
         with:
