--- a/.github/workflows/cpu_docker_marqo.yml
+++ b/.github/workflows/cpu_docker_marqo.yml
@@ -40,7 +40,7 @@ permissions:
   contents: read
 
 concurrency:
-  group: cpu-local-api-tests-${{ github.ref }}
+  group: cpu-docker-api-tests-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
