Allow builds from a forked PR to access secrets on approval

--- a/.github/workflows/cpu_local_marqo.yml
+++ b/.github/workflows/cpu_local_marqo.yml
@@ -35,6 +35,9 @@ on:
   pull_request:
     branches:
       - mainline
+  pull_request_target:
+    branches:
+      - mainline
 
 permissions:
   contents: read
