--- a/.github/workflows/unit_test_200gb_CI.yml
+++ b/.github/workflows/unit_test_200gb_CI.yml
@@ -12,6 +12,10 @@ on:
     branches:
       - mainline
       - releases/*
+  pull_request_target:
+    branches:
+      - mainline
+      - releases/*
 
 concurrency:
   group: unit-tests-${{ github.ref }}
